--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
 
 <h1 id="message">Original header</h1>
 
-<script src="bower_components/requirejs/require.js"></script>
+<script data-main="js/main" src="bower_components/requirejs/require.js"></script>
 <script src="js/require-mock.js"></script>
-<script src="js/main.js"></script>
 
 <script>
 
-require(['js/hello'], function (hello) {
+require(['hello'], function (hello) {
   hello.doIt('#message');
 });
 
