Moved require-mock.js into home directory

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1 id="message">Original header</h1>
 
 <script data-main="js/main" src="bower_components/requirejs/require.js"></script>
-<script src="js/require-mock.js"></script>
+<script src="require-mock.js"></script>
 
 <script>
 
